2008-03-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* rootdens_GP2D.C, rootdens_GP1D.C, rootdens_AP.C, rootdens_PLF.C:
	* rootdens_PLF, rootdens.h (initalize): New function.

	* action_sow.C (plant): New alias.
	(row_width): New parameter.
	* column_std.C, column.h, field.C, field.h (sow): Take row width
	argument. 
	* vegetation.h, vegetation_permanent.C, vegetation_crops.C (sow): Ditto.
	* crop_std.C, crop_simple.C, crop_sold.C, crop_old.C:
	* crop.h, root_system.C, root_system.h (initialize): Ditto.

2008-03-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* program_document.C (ProgramDocument::print_model)
	(ProgramDocument::print_model, ProgramDocument::print_fixed): Use
	'Format::alist_description'.

2008-03-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* format.C, format.h, format_LaTeX.C, format_LaTeX.h
	(format_type): New virtual member function.
	* format_LaTeX.C (FormatLaTeX::formatp, FormatLaTeX::raw): Use it.
	* format.C, format.h (Format::alist_discription): New virtual
	member function.

2008-03-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.27 released.

2008-03-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C (Implementation::initialize): New function.
	(ParserFile::load_nested): Call it.
	(Implementation::add_derived, Implementation::load_derived)
	(Implementation::load_list):  Use 'Treelog::Open'.
	* toplevel.C (Toplevel::parse_system_file): Don't use 'Treelog::Open'.

2008-02-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* condition_time.C (every): New model.
	* harvesting.C (Harvesting::harvest): Renamed from 'operator ()'.
	* crop_std.C: Update caller.
	* submodeler.h (submodel_value): New template.
	* timestep.C (Timestep::null): New function.
	* time.C (Time::null): New function.

2008-02-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* condition_time.C (mm_dd, before_mm_dd, after_mm_dd): Take
	'minute' and 'second' parameters.
	* vcheck.C, vcheck.h (valid_hour, valid_minute): New static member
	functions.
