@@ -247,6 +247,10 @@ void
 Soil::set_porosity (size_t i, double Theta)
 { horizon_[i]->hydraulic->set_porosity (Theta); }
 
+const Mobsol& 
+Soil::mobile_solute (size_t cell) const
+{ return horizon_[cell]->mobile_solute ();}
+
 double 
 Soil::tortuosity_factor (size_t i, double Theta) const
 { return horizon_[i]->tortuosity->factor (*horizon_[i]->hydraulic, Theta); }
